[gd_scene load_steps=2 format=3 uid="uid://cj3kupsy5h33w"]

[ext_resource type="Script" uid="uid://bwy2biobw6kaq" path="res://Script/BattleCharacter.gd" id="1_tkfb7"]

[node name="BattleCharacter" type="Node2D"]
script = ExtResource("1_tkfb7")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="Sprite"]
offset_right = 40.0
offset_bottom = 40.0

[node name="ShieldLabel" type="Label" parent="Sprite"]
offset_right = 40.0
offset_bottom = 23.0
